[gd_scene load_steps=4 format=3 uid="uid://c2m8n7k4qaqr1"]

[ext_resource type="Script" uid="uid://bnq70qd877ml5" path="res://Scenes/item_inspector.gd" id="1_inspector"]
[ext_resource type="Texture2D" uid="uid://cdft4ljmxdmbr" path="res://resource/UI/ProgressBar/ART_UI_MAIN_MiniGames_ProgressBar_Fill.png" id="2_fyv72"]
[ext_resource type="Texture2D" uid="uid://d1e5khwvr52ew" path="res://resource/UI/ProgressBar/ART_UI_MAIN_MiniGames_ProgressBar_Frame.png" id="3_shu6k"]

[node name="ItemInspector" type="CanvasLayer"]
layer = 10
script = ExtResource("1_inspector")

[node name="Background" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CleaningUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProgressContainer" type="VBoxContainer" parent="CleaningUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -2225.0
offset_right = 960.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="CleaningUI/ProgressContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.7, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
text = "Cleaning Progress"
horizontal_alignment = 1

[node name="FrameTexture" type="TextureRect" parent="CleaningUI/ProgressContainer"]
layout_mode = 2
texture = ExtResource("3_shu6k")

[node name="FillMask" type="Control" parent="CleaningUI/ProgressContainer"]
clip_contents = true
layout_mode = 2

[node name="FillTexture" type="TextureRect" parent="CleaningUI/ProgressContainer/FillMask"]
layout_mode = 0
offset_left = 14.0
offset_top = 45.0
offset_right = 1934.0
offset_bottom = 1125.0
texture = ExtResource("2_fyv72")

[node name="Hint" type="Label" parent="CleaningUI"]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 0.8)
theme_override_font_sizes/font_size = 14
text = "Left-click to clean | Right-click drag to rotate | E to close"
horizontal_alignment = 1
